# casadi_kin_dyn

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakeListsold.txt  Dockerfile  README.md  log.txt  pyproject.toml
.github/workflows/: release.yml
bindings/python/: CMakeLists.txt  pyCasadiKinDyn.cpp
bindings/python/casadi_kin_dyn/: __init__.py
include/casadi_kin_dyn/: casadi_kin_dyn.h  collision_handler.h
src/: casadi_kin_dyn.cpp  collision_handler.cpp
tests/: run_test.py
wh/: cmeel-0.50.2-py3-none-any.whl  cmeel_casadi_kin_dyn-0.2.3-0-cp310-cp310-manylinux_2_28_x86_64.whl
