[project]
name = "cmeel_casadi_kin_dyn"
version = "0.2.3"
description = ""
readme = "README.md"
requires-python = ">= 3.9"
license = "BSD-2-Clause"
authors = [{ name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }]

[project.urls]
homepage = "https://github.com/lvjonok/casadi_kin_dyn"
repository = "https://github.com/lvjonok/casadi_kin_dyn.git"
changelog = "https://github.com/lvjonok/casadi_kin_dyn/CHANGELOG.md"

[build-system]
requires = [
    "cmeel[build]",
    "cmeel_casadi",
    "pin",
    "eigenpy",
    "cmeel-tinyxml",
    "cmeel-eigen",
    "cmeel-urdfdom_headers",
    "cmeel-urdfdom",
]
build-backend = "cmeel.build"

[tool.cmeel]
run-tests = false
