[project]
name = "cmeel_casadi_kin_dyn"
version = "1.6.0"
description = "Cmeel distribution of a package for generation of symbolic (casadi::SX) expressions of robot kinematics and dynamics. Based on URDF and Pinocchio."
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT License"
authors = [{ name = "Lev Kozlov", email = "kozlov.l.a10@gmail.com" }]
dependencies = [
    "cmeel_casadi",
    "pin",
    "eigenpy",
    "cmeel-tinyxml",
    "cmeel-eigen",
    "cmeel-urdfdom_headers",
    "cmeel-urdfdom",
]

[project.urls]
homepage = "https://github.com/lvjonok/casadi_kin_dyn"
repository = "https://github.com/lvjonok/casadi_kin_dyn.git"
changelog = "https://github.com/lvjonok/casadi_kin_dyn/CHANGELOG.md"

[build-system]
requires = [
    "cmeel[build]",
    "cmeel_casadi",
    "pin",
    "eigenpy",
    "cmeel-tinyxml",
    "cmeel-eigen",
    "cmeel-urdfdom_headers",
    "cmeel-urdfdom",
]
build-backend = "cmeel.build"

[tool.cmeel]
run-tests = false
